# ocean_ctf

./: .env  .env_example  .flake8  .gitignore  .gitmodules  .pylintrc  LICENSE  Makefile  README.md  celery_worker.py  cfg.py  docker-compose.yml  main.py  pyproject.toml  requirements.prod.txt  requirements.txt  run.sh  uwsgi.ini  wsgi.py
.github/workflows/: main.yml
app/: __init__.py  database.py  exceptions.py  extensions.py  worker.py
app/admin/: __init__.py  admin_views.py  ctf_views.py  docker_views.py
app/api/: __init__.py  health.py  route.py
app/auth/: __init__.py  acls.py
app/celeryapp/: __init__.py
app/core/: api.py  command.py  const.py  decorators.py  error_handlers.py  exceptions.py  flask_celery.py  middlewares.py  tools.py
app/ctf/: form.py  modles.py  schema.py  tasks.py  views.py
app/docker/: form.py  models.py  service.py  task.py  tasks.py  views.py
app/frontend/: __init__.py  services.py  tasks.py  views.py  ws.py
app/lib/: api.py  cache.py  command.py  decorators.py  docker-compose.py  env_load.py  exceptions.py  logger.py  middlewares.py  rest_response.py  rest_views.py  tools.py  validator.py
app/models/: __init__.py  admin.py  base.py  ctf.py  docker.py  user.py
app/routes/: ws.py
app/services/: docker.py  system.py
app/sys/: models.py  service.py  tasks.py  views.py
app/tasks/: __init__.py  ctf.py  docker.py  task_base.py  task_docker.py  vulnerability.py
app/utils/: security.py  tools.py  validator.py
app/vuln/: admin_views.py  task.py  tasks.py  user_views.py
app/vulnerability/: admin_views.py  tasks.py  user_views.py
config/: celery_config.py  config.py
data/: database.py  utils.py
data/models/: __init__.py  admin.py  base.py  ctf.py  docker.py  user.py
install/: ctf.conf  install.sh  nginx.conf  ocean.sql
lib/: app_factory.py  cache.py  command.py  decorators.py  middlewares.py  rest_views.py  tools.py
lib/utils/: authlib.py
logs/: .gitignore
requirements/: base.txt  dev.txt  prod.txt  test.txt
static/: index.css  lib_bootstrap_message.js
templates/: challengeDetail.html  header.html  index.html  login.html  notice.html  register.html  test.html  user.html  user_rank.html
tests/: conftest.py  test_dcker.py  test_docker.py  test_health_api.py  test_tasks.py  test_validator.py
upload/: .gitignore
(+23 files in other folders)
